--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-node_modules
-template.js
-template.py
 .DS_Store
-generate.js
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
